--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <h3>Run Buddy</h3></a>
         </div>
       
-            <div class="project-container pro2 carbon">
-                <a href=""><h3>Coming Soon</h3></a>
+            <div class="project-container who-brew pro2 carbon">
+                <a href="https://dawsontilley.github.io/who-brew/"><h3>Who-Brew</h3></a>
             </div>
             <div class="project-container pro3 carbon">
                 <a href=""><h3>Coming Soon</h3></a>
