added project 3, quotes

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
             <div class="project-container who-brew pro2 carbon">
                 <a href="https://dawsontilley.github.io/who-brew/"><h3>Who-Brew</h3></a>
             </div>
-            <div class="project-container pro3 carbon">
-                <a href=""><h3>Coming Soon</h3></a>
+            <div class="project-container pro3 insp quotes carbon">
+                <a href="https://inspirational-quote-app.herokuapp.com/"><h3>Inspirational Quotes</h3></a>
             </div>
             <div class="project-container pro2 carbon">
                 <a href=""><h3>Coming Soon</h3></a>
