--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="project-container who-brew pro2 carbon">
                 <a href="https://dawsontilley.github.io/who-brew/"><h3>Who-Brew</h3></a>
             </div>
-            <div class="project-container pro3 insp-quotes carbon">
+            <div class="project-container pro3 insp-quotes">
                 <a href="https://inspirational-quote-app.herokuapp.com/"><h3>Inspirational Quotes</h3></a>
             </div>
             <div class="project-container pro2 carbon">
